Model api+docker
Added Dockerfile for model container and added service to docker-compose. Communication test.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,13 @@ services:
     networks:
       - my_network
 
+  model:
+    build: ./model
+    ports:
+      - "6000:6000"
+    networks:
+      - my_network
+
 networks:
   my_network:
     driver: bridge
